# aidoku-french-sources

./: .gitattributes  .gitignore  CLAUDE.md  LIBRARY_REFRESH_DIAGNOSTIC.md  README.md  ROADMAP.md  _config.yml  debug_aidoku.sh  final_test.sh  fix_listing_ids.py  fix_source_json.sh  index.html  index.json  index.min.json  rebuild_templates.sh  repair_json.sh  script.js  test_repack.sh  test_workflow_command.sh
.claude/: settings.local.json
.github/workflows/: build copy.yaml  build-develop.yaml  build.yaml  build_old.yaml  deploy-icons.yaml
offline-sources/fr.astralmanga/: Cargo.toml
offline-sources/fr.astralmanga/res/: source.json
offline-sources/fr.astralmanga/src/: lib.rs
offline-sources/fr.crunchyscan/res/: filters.json
offline-sources/fr.crunchyscan/src/: lib.rs  parser.rs
offline-sources/fr.epsilonsoft/: Cargo.toml
offline-sources/fr.epsilonsoft/res/: filters.json  source.json
offline-sources/fr.epsilonsoft/src/: lib.rs
offline-sources/fr.japscan/: Cargo.toml
offline-sources/fr.japscan/res/: source.json
offline-sources/fr.japscan/src/: helper.rs  lib.rs  parser.rs
offline-sources/fr.legacyscans/: Cargo.toml
offline-sources/fr.legacyscans/res/: source.json
offline-sources/fr.legacyscans/src/: lib.rs
offline-sources/fr.mangascan/: Cargo.toml
offline-sources/fr.mangascan/res/: source.json
offline-sources/fr.mangascan/src/: lib.rs
offline-sources/fr.reaperscansfr/: Cargo.toml
offline-sources/fr.reaperscansfr/res/: source.json
offline-sources/fr.reaperscansfr/src/: lib.rs
offline-sources/fr.starboundscans/: Cargo.toml
offline-sources/fr.sushiscan/: Cargo.toml
offline-sources/fr.sushiscan/res/: source.json
offline-sources/fr.sushiscan/src/: lib.rs
public/: index.html  script.js  style.css
reference_test/: index.json  index.min.json
sources/: fr.animesama-v13.aix  fr.animesama-v2.aix  fr.animesama-v21.aix  fr.animesama-v3.aix  fr.animesama-v4.aix  fr.animesama-v7.aix  fr.animesama-v8.aix  fr.astralmanga-v5.aix  fr.crunchyscan-v1.aix  fr.fmteam-v1.aix  fr.fmteam-v2.aix  fr.fmteam-v3.aix  fr.fmteam-v8.aix  fr.legacyscans-v1.aix  fr.lelmanga-v10.aix  fr.lelmanga-v18.aix  fr.lelmanga-v3.aix  fr.lelmanga-v4.aix  fr.lelmanga-v5.aix  fr.lelmanga-v8.aix  fr.lelmanga-v9.aix  fr.lelscanfr-v15.aix  fr.lelscanfr-v3.aix  fr.lelscanfr-v4.aix  fr.lelscanfr-v5.aix  fr.lelscanfr-v7.aix  fr.lelscanfr-v8.aix  fr.mangascan-v1.aix  fr.mangascantrad-v12.aix  fr.mangascantrad-v13.aix  fr.mangascantrad-v17.aix  fr.mangascantrad-v18.aix  fr.mangascantrad-v19.aix  fr.mangascantrad-v23.aix  fr.mangascantrad-v26.aix  fr.mangasorigines-v10.aix  fr.mangasorigines-v11.aix  fr.mangasorigines-v12.aix  fr.mangasorigines-v19.aix  fr.mangasorigines-v7.aix  (+44 more)
sources/fr.animesama/: Cargo.toml
sources/fr.animesama/res/: filters.json  source.json
sources/fr.animesama/src/: helper.rs  lib.rs  parser.rs
sources/fr.astralmanga/: Cargo.toml
sources/fr.astralmanga/res/: source.json  source.json.backup
sources/fr.astralmanga/src/: lib.rs
sources/fr.crunchyscan/: ANALYSIS.md  Cargo.toml
sources/fr.crunchyscan/res/: filters.json  source.json
sources/fr.crunchyscan/src/: helper.rs  lib.rs  parser.rs
sources/fr.epsilonscan/: Cargo.toml
sources/fr.epsilonscan/res/: filters.json  source.json
sources/fr.epsilonscan/src/: helper.rs  lib.rs  parser.rs
sources/fr.epsilonsoft/res/: filters.json  listings.json  source.json
sources/fr.epsilonsoft/src/: lib.rs
sources/fr.fmteam/: Cargo.toml  README.md
sources/fr.fmteam/res/: source.json
sources/fr.fmteam/src/: helper.rs  lib.rs  parser.rs
sources/fr.harmony/: Cargo.toml
sources/fr.harmony/res/: filters.json  source.json
sources/fr.harmony/src/: lib.rs
sources/fr.japscan/: Cargo.toml
sources/fr.japscan/res/: filters.json  source.json
sources/fr.japscan/src/: helper.rs  lib.rs  parser.rs
sources/fr.legacyscans/: Cargo.toml
sources/fr.legacyscans/res/: source.json
sources/fr.lelmanga/: Cargo.toml
sources/fr.lelmanga/res/: filters.json  source.json
sources/fr.lelmanga/src/: lib.rs
sources/fr.lelscanfr/: Cargo.toml  chapter.txt
sources/fr.lelscanfr/res/: filters.json  source.json
sources/fr.lelscanfr/src/: helper.rs  lib.rs  parser.rs
sources/fr.mangascan/: Cargo.toml
sources/fr.mangascan/res/: source.json
sources/fr.mangascan/src/: lib.rs
sources/fr.mangascantrad/: Cargo.toml  chapters.txt
sources/fr.mangascantrad/res/: filters.json  source.json
sources/fr.mangascantrad/src/: lib.rs
sources/fr.mangasorigines/: Cargo.toml
sources/fr.mangasorigines/res/: filters.json  source.json
sources/fr.mangasorigines/src/: lib.rs
sources/fr.mangasscans/: Cargo.toml
sources/fr.mangasscans/res/: filters.json  source.json
sources/fr.phenixscans/: Cargo.toml
sources/fr.phenixscans/res/: filters.json  source.json
sources/fr.phenixscans/src/: helper.rs  lib.rs  parser.rs
sources/fr.poseidonscans/: Cargo.toml  response.txt
sources/fr.poseidonscans/res/: filters.json  source.json
sources/fr.poseidonscans/src/: helper.rs  lib.rs  parser.rs
sources/fr.raijinscans/: Cargo.toml  TESTING.md
sources/fr.reaperscansfr/: Cargo.toml
sources/fr.rimuscans/: Cargo.toml
sources/fr.rimuscans/res/: filters.json  source.json
sources/fr.rimuscans/src/: helper.rs  lib.rs  parser.rs
sources/fr.sushiscan/: Cargo.toml
sources/fr.sushiscans/: Cargo.toml
templates/aidoku-stable-wrapper/: Cargo.toml
templates/aidoku-stable-wrapper/macros/: Cargo.toml
templates/aidoku-stable-wrapper/macros/src/: lib.rs
templates/aidoku-stable-wrapper/src/: lib.rs
templates/aidoku-wrapper/: Cargo.toml
templates/madara/: Cargo.toml
templates/madara-stable/: Cargo.toml
templates/madara-stable/src/: helper.rs  lib.rs  template.rs
templates/mangastream/: Cargo.toml
templates/mangastream-stable/: Cargo.toml
templates/mangastream-stable/src/: helper.rs  template.rs
templates/mangastream/src/: helper.rs  template.rs
templates/mmrcms/: Cargo.toml
templates/mmrcms-stable/: Cargo.toml
test_local/: index.json  index.min.json
workflow_test/: index.json  index.min.json
(+102 files in other folders)
