[package]
name = "reaperscansfr"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
aidoku-wrapper = { path = "../../templates/aidoku-wrapper" }
madara_template = { path = "../../templates/madara" }
