[package]
name = "sushiscan"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
aidoku-stable-wrapper = { path = "../../templates/aidoku-stable-wrapper" }
mangastream_stable_template = { path = "../../templates/mangastream-stable" }
