[package]
name = "mangascan"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs/", rev = "bae338b15a3840dc0428c7af64fe9fc92abfa2fb", features = ["helpers"] }
mmrcms_template = { path = "../../templates/mmrcms" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
