[package]
name = "mangascantrad"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs/", rev = "bae338b15a3840dc0428c7af64fe9fc92abfa2fb" }
madara_template = { path = "../../templates/madara" }
