[package]
name = "aidoku-stable-wrapper"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Macro support
aidoku-stable-macros = { path = "macros" }

# Use a stable Rust-compatible JSON library
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Base64 support for image encoding  
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[lib]
name = "aidoku_stable"
crate-type = ["rlib"]