[package]
name = "madara_stable_template"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Simplified dependencies - no unstable features
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
aidoku_stable_wrapper = { path = "../aidoku-stable-wrapper", package = "aidoku-stable-wrapper" }