[package]
name = "mangastream_template"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Simplified dependencies - no unstable features
aidoku_wrapper = { path = "../aidoku-wrapper", package = "aidoku-wrapper" }
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }